--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Photo Booth @saphasena68</title>
-
-<!-- ฟอนต์น่ารัก -->
-<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-
 <style>
   :root{
     --frame-blue: #bfeeff;
@@ -20,18 +16,10 @@
   html,body{height:100%;margin:0;font-family:"Kanit","Inter",system-ui,sans-serif;background:#f3f7fb;color:var(--text);}
   .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;box-sizing:border-box;}
   .booth{width:380px;background:linear-gradient(180deg,var(--card-bg),#f7fbff);border-radius:18px;box-shadow:var(--shadow);padding:14px;}
-
-  .title{
-    text-align:center;
-    font-family:'Patrick Hand', cursive;
-    font-size:32px;
-    margin-bottom:8px;
-    color:var(--text);
-  }
-
+  .title{text-align:center;font-weight:700;font-size:16px;margin-bottom:8px;color:var(--text);}
   .frame-preview{width:100%;background:var(--frame-blue);border-radius:12px;padding:8px;box-sizing:border-box;position:relative;overflow:hidden;aspect-ratio:2/3;display:flex;align-items:center;justify-content:center;}
   #video{width:92%;border-radius:8px;background:black;transform:scaleX(-1);}
-  .controls{margin-top:12px;display:flex;gap:8px;justify-content:center;}
+  .controls{margin-top:12px;display:flex;gap:8px;justify-content:center;flex-wrap:wrap;}
   button{background:var(--accent-yellow);border:0;padding:8px 12px;border-radius:10px;font-weight:700;cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,0.12);}
   button.secondary{background:#e6f3ff;color:var(--text);font-weight:600;}
   .thumbs{margin-top:12px;display:flex;flex-direction:column;gap:8px;align-items:center;}
@@ -39,30 +27,30 @@
   .thumb{width:30%;background:white;border-radius:8px;overflow:hidden;height:80px;display:flex;align-items:center;justify-content:center;box-shadow:0 6px 14px rgba(10,30,60,0.06);}
   .thumb img{width:100%;height:100%;object-fit:cover;border-radius:8px;}
   .countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
+  .next-msg{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);background:#ffd54f;color:#0b3b5a;padding:4px 10px;border-radius:12px;font-weight:600;display:none;}
   .small-note{font-size:12px;color:#334e6b;text-align:center;margin-top:8px;}
-  .actions{display:flex;gap:8px;justify-content:center;margin-top:8px;}
+  .actions{display:flex;gap:8px;justify-content:center;margin-top:8px;flex-wrap:wrap;}
   .download-btn{background:#4d9cff;color:white;padding:8px 10px;border-radius:10px;border:0;font-weight:700;}
+  .print-btn{background:#43a047;color:white;padding:8px 10px;border-radius:10px;border:0;font-weight:700;}
+  .star{position:absolute;fill:#ffd54f;opacity:0.8;}
   @media (min-width:700px){.booth{width:480px;}}
 </style>
 </head>
 <body>
 <div class="wrap">
   <div class="booth" role="application" aria-label="photo booth">
-    
     <div class="title">Photo Booth @saphasena68</div>
 
     <div class="frame-preview" id="framePreview">
       <video id="video" autoplay playsinline></video>
       <div class="countdown" id="countdown" style="display:none;"></div>
-      <!-- ดาว -->
-      <svg style="position:absolute;left:6px;top:8px;opacity:0.9" width="48" height="48" viewBox="0 0 24 24"><path d="M12 2l2.5 6 6.5.5-5 4 1.5 6-5.5-3.5L6 19l1.5-6-5-4 6.5-.5L12 2z" fill="#ffd54f"/></svg>
-      <svg style="position:absolute;right:10px;bottom:12px;opacity:0.9" width="32" height="32" viewBox="0 0 24 24"><path d="M12 2l2.5 6 6.5.5-5 4 1.5 6-5.5-3.5L6 19l1.5-6-5-4 6.5-.5L12 2z" fill="#ffd54f"/></svg>
+      <div class="next-msg" id="nextMsg">Next ➡️</div>
     </div>
 
     <div class="controls">
+      <button id="switchBtn">สลับกล้อง</button>
       <button id="startBtn">เริ่มถ่าย (3 รูป)</button>
       <button id="retakeBtn" class="secondary">เริ่มใหม่</button>
-      <button id="toggleBtn" class="secondary">สลับกล้อง</button>
     </div>
 
     <div class="thumbs" aria-live="polite">
@@ -74,94 +62,157 @@
       <div class="small-note">ภาพตัวอย่าง 3 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว (1200×1800 px)</div>
       <div class="actions">
         <button id="downloadBtn" class="download-btn">ดาวน์โหลด 4x6</button>
+        <button id="printBtn" class="print-btn">พิมพ์รูป</button>
       </div>
     </div>
   </div>
 </div>
 
+<audio id="snapSound" src="https://www.soundjay.com/mechanical/camera-shutter-click-01.mp3" preload="auto"></audio>
+
 <script>
-let video=document.getElementById("video"),
-    startBtn=document.getElementById("startBtn"),
-    retakeBtn=document.getElementById("retakeBtn"),
-    toggleBtn=document.getElementById("toggleBtn"),
-    downloadBtn=document.getElementById("downloadBtn"),
-    countdownEl=document.getElementById("countdown"),
-    thumbs=[document.getElementById("t1"),document.getElementById("t2"),document.getElementById("t3")],
-    captured=[], currentStream=null, currentFacing="user";
+(async function(){
+  const video=document.getElementById('video');
+  const startBtn=document.getElementById('startBtn');
+  const retakeBtn=document.getElementById('retakeBtn');
+  const switchBtn=document.getElementById('switchBtn');
+  const countdownEl=document.getElementById('countdown');
+  const nextMsg=document.getElementById('nextMsg');
+  const thumbs=[document.getElementById('t1'),document.getElementById('t2'),document.getElementById('t3')];
+  const snapSound=document.getElementById('snapSound');
+  let captures=[null,null,null];
+  let currentFacing="user";
+  let stream;
 
-// เสียงแชะ
-const snapSound=new Audio("https://actions.google.com/sounds/v1/camera/camera_click.ogg");
-
-async function initCamera(facing="user"){
-  if(currentStream){
-    currentStream.getTracks().forEach(t=>t.stop());
+  async function startCamera(){
+    if(stream){stream.getTracks().forEach(t=>t.stop());}
+    try{
+      stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:currentFacing},audio:false});
+      video.srcObject=stream;
+      await video.play();
+    }catch(err){alert('เปิดกล้องไม่สำเร็จ');console.error(err);}
   }
-  try{
-    currentStream=await navigator.mediaDevices.getUserMedia({video:{facingMode:facing}});
-    video.srcObject=currentStream;
-    currentFacing=facing;
-  }catch(e){alert("ไม่พบกล้อง: "+e);}
-}
-initCamera();
+  await startCamera();
 
-toggleBtn.onclick=()=>{initCamera(currentFacing==="user"?"environment":"user");};
+  function showCountdown(n){countdownEl.style.display='flex';countdownEl.textContent=n;}
+  function hideCountdown(){countdownEl.style.display='none';}
 
-async function countdown(sec){
-  countdownEl.style.display="flex";
-  for(let i=sec;i>0;i--){
-    countdownEl.textContent=i;
-    await new Promise(r=>setTimeout(r,1000));
+  function showNextMsg(){nextMsg.style.display='block';setTimeout(()=>{nextMsg.style.display='none';},1000);}
+
+  function captureFrame(){
+    const vw=video.videoWidth,vh=video.videoHeight;
+    const canvas=document.createElement('canvas');
+    canvas.width=vw;canvas.height=vh;
+    const ctx=canvas.getContext('2d');
+    ctx.translate(vw,0);ctx.scale(-1,1);
+    ctx.drawImage(video,0,0,vw,vh);
+    return canvas.toDataURL('image/png');
   }
-  countdownEl.style.display="none";
-}
 
-async function takePhoto(){
-  let canvas=document.createElement("canvas");
-  canvas.width=video.videoWidth;canvas.height=video.videoHeight;
-  canvas.getContext("2d").drawImage(video,0,0);
-  snapSound.play();
-  return canvas.toDataURL("image/jpeg");
-}
-
-startBtn.onclick=async()=>{
-  captured=[];
-  thumbs.forEach((t,i)=>t.innerHTML="<span style='opacity:0.45;'>"+(i+1)+"</span>");
-  for(let i=0;i<3;i++){
-    await countdown(3);
-    let img=await takePhoto();
-    captured.push(img);
-    thumbs[i].innerHTML="<img src='"+img+"'/>";
+  async function takeThreeShots(){
+    startBtn.disabled=true;retakeBtn.disabled=true;
+    captures=[null,null,null];thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
+    for(let i=0;i<3;i++){
+      for(let s=3;s>=1;s--){showCountdown(s);await new Promise(r=>setTimeout(r,800));}
+      hideCountdown();
+      const flash=document.createElement('div');
+      flash.style.position='absolute';flash.style.inset='0';flash.style.background='white';flash.style.opacity='0.95';flash.style.transition='opacity 170ms';document.body.appendChild(flash);
+      setTimeout(()=>{flash.style.opacity='0';setTimeout(()=>flash.remove(),200);},120);
+      snapSound.play();
+      const data=captureFrame();captures[i]=data;
+      thumbs[i].innerHTML=`<img src="${data}" alt="thumb${i+1}">`;
+      if(i<2)showNextMsg();
+      await new Promise(r=>setTimeout(r,500));
+    }
+    startBtn.disabled=false;retakeBtn.disabled=false;
   }
-};
 
-retakeBtn.onclick=()=>{captured=[];thumbs.forEach((t,i)=>t.innerHTML="<span style='opacity:0.45;'>"+(i+1)+"</span>");};
+  startBtn.addEventListener('click',takeThreeShots);
+  retakeBtn.addEventListener('click',()=>{captures=[null,null,null];thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);});
+  switchBtn.addEventListener('click',()=>{currentFacing=(currentFacing==="user")?"environment":"user";startCamera();});
 
-downloadBtn.onclick=()=>{
-  if(captured.length<3){alert("ถ่ายให้ครบ 3 รูปก่อนค่ะ");return;}
-  let canvas=document.createElement("canvas");
-  canvas.width=1200;canvas.height=1800;
-  let ctx=canvas.getContext("2d");
-  ctx.fillStyle="#bfeeff";
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+  // เพิ่มดาวสุ่มรอบกรอบ
+  const frame=document.getElementById('framePreview');
+  for(let i=0;i<15;i++){
+    const star=document.createElementNS("http://www.w3.org/2000/svg","svg");
+    const size=Math.random()*10+6;
+    star.setAttribute("width",size);
+    star.setAttribute("height",size);
+    star.classList.add("star");
+    star.style.left=Math.random()*90+"%";
+    star.style.top=Math.random()*90+"%";
+    star.innerHTML='<path d="M12 2l2.5 6 6.5.5-5 4 1.5 6-5.5-3.5L6 19l1.5-6-5-4 6.5-.5L12 2z" fill="#ffd54f"/>';
+    frame.appendChild(star);
+  }
 
-  ctx.fillStyle="#0b3b5a";
-  ctx.font="48px 'Patrick Hand'";
-  ctx.textAlign="center";
-  ctx.fillText("Photo Booth @saphasena68",canvas.width/2,70);
+  // ฟังก์ชันวาดตอนดาวน์โหลด
+  function drawStar(ctx,x,y,r,color){
+    ctx.save();ctx.fillStyle=color;ctx.beginPath();
+    for(let i=0;i<5;i++){const a=(Math.PI*2*i)/5-Math.PI/2;ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);const ia=a+Math.PI/5;ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);}
+    ctx.closePath();ctx.fill();ctx.restore();
+  }
+  function roundRect(ctx,x,y,w,h,r,fill,stroke){ctx.beginPath();ctx.moveTo(x+r,y);ctx.arcTo(x+w,y,x+w,y+h,r);ctx.arcTo(x+w,y+h,x,y+h,r);ctx.arcTo(x,y+h,x,y,r);ctx.arcTo(x,y,x+w,y,r);ctx.closePath();if(fill)ctx.fill();if(stroke)ctx.stroke();}
+  function drawImageInFrame(ctx,imgSrc,x,y,w,h,r){
+    return new Promise((resolve,reject)=>{
+      const img=new Image();
+      img.onload=function(){
+        ctx.save();roundRect(ctx,x,y,w,h,r,false,false);ctx.clip();
+        const ratio=Math.max(w/img.width,h/img.height);
+        const nw=img.width*ratio,nh=img.height*ratio;
+        const dx=x+(w-nw)/2,dy=y+(h-nh)/2;
+        ctx.drawImage(img,dx,dy,nw,nh);ctx.restore();resolve();
+      };
+      img.onerror=reject;img.src=imgSrc;
+    });
+  }
 
-  let slotW=1000, slotH=500, x=100, y=150, gap=50;
-  captured.forEach((src,i)=>{
-    let img=new Image();img.src=src;
-    img.onload=()=>{ctx.drawImage(img,x,y+i*(slotH+gap),slotW,slotH);};
+  async function generateCanvas(){
+    const finalW=1200,finalH=1800;
+    const canvas=document.createElement('canvas');canvas.width=finalW;canvas.height=finalH;
+    const ctx=canvas.getContext('2d');
+    ctx.fillStyle='#bfeeff';ctx.fillRect(0,0,finalW,finalH);
+
+    const margin=60;const innerX=margin;const innerY=margin+60;
+    const innerW=finalW-margin*2;const innerH=finalH-innerY-margin;
+    ctx.fillStyle='#ffffff';roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
+
+    ctx.fillStyle='#08324d';ctx.font='bold 48px "Kanit",sans-serif';ctx.textAlign='center';ctx.textBaseline='middle';
+    ctx.fillText('Photo Booth @saphasena68',finalW/2,margin+28);
+
+    const gutter=18;const photoX=innerX+28;const photoW=innerW-56;
+    const singleH=Math.floor((innerH-gutter*2-56)/3);
+    let y=innerY+28;
+    for(let i=0;i<3;i++){
+      ctx.fillStyle='#e9f6ff';roundRect(ctx,photoX,y,photoW,singleH,12,true,false);
+      if(captures[i]){await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,12);}
+      ctx.strokeStyle='#ffffff';ctx.lineWidth=8;roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,9,false,true);
+      y+=singleH+gutter;
+    }
+
+    // ดาวในรูป
+    drawStar(ctx,innerX+24,innerY-6,22,'#ffd54f');
+    drawStar(ctx,innerX+innerW-28,innerY+20,16,'#ffd54f');
+    drawStar(ctx,innerX+innerW-40,innerY+innerH-18,20,'#ffd54f');
+    drawStar(ctx,innerX+44,innerY+innerH-10,12,'#ffd54f');
+
+    ctx.fillStyle='#3b6b85';ctx.font='18px sans-serif';ctx.fillText('พิมพ์ขนาด 4x6 นิ้ว • Photo Booth',finalW/2,finalH-30);
+    return canvas;
+  }
+
+  document.getElementById('downloadBtn').addEventListener('click',async ()=>{
+    if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
+    const canvas=await generateCanvas();
+    const a=document.createElement('a');a.href=canvas.toDataURL('image/png');a.download='photobooth_4x6.png';a.click();
   });
 
-  setTimeout(()=>{
-    let link=document.createElement("a");
-    link.download="photobooth_4x6.jpg";
-    link.href=canvas.toDataURL("image/jpeg",0.95);
-    link.click();
-  },800);
-};
+  document.getElementById('printBtn').addEventListener('click',async ()=>{
+    if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
+    const canvas=await generateCanvas();
+    const win=window.open('','PrintPhoto');
+    win.document.write('<img src="'+canvas.toDataURL('image/png')+'" style="width:100%">');
+    win.print();
+  });
+})();
 </script>
 </body>
 </html>
